hphp/test/zend/good/zend/nowdoc_017.php
<?php 

class foo {
    public $bar = <<<'EOT'
bar
EOT;
}

print "ok!\n";

?>